--- a/templates/outline.html
+++ b/templates/outline.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width = device-width, initial-scale=1.0">
-        <Title> Outline</Title>
+        <Title> Investment Analysis-inator</Title>
         <link rel="stylesheet" href="{{url_for('static', filename='style.css') }}">
 
     </head>
