fixed up calculations in analysis.html and added monthly income in the results

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -70,10 +70,12 @@
 
 
             <div class="result-container">
-                <p class="results">Monthly Mortgage Payment: <span id="mortgage"></span></p>
-                
-                <p class="results">Monthly Expenses: <span id="monthExp"></span></p>
 
+                <p class="results">Monthly Income: <span id="incomeresult"></span></p>
+
+                <p class="results">Monthly Mortgage Payment: <span id="mortgage"></span></p>
+
+                <p class="results">Monthly Expenses: <span id="monthExp"></span></p>
 
                 <p class="results">Monthly Cash Flow: <span id="cashflow"></span></p>
 
